<resources>
    <string name="app_name">WiFinder</string>
    <string name="signal_strength">Signal strength: </string>
    <string name="signal_level">Signal level: %1$d / 5</string>
    <string name="current_angle">current angle: %1$.2f</string>
    <string name="best_angle">Optimal angle: %1$.2f</string>
    <string name="best_angle_placeholder">Optimal angle: need %1$d measurements</string>
    <string name="get_signal_strength">Get signal strength</string>
    <string name="start_iterations">Start 20 iterations</string>
    <string name="runBtn">Run</string>
</resources>
