<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signal_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signal_strength" />

    <TextView
        android:id="@+id/signal_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signal_level" />

    <Button
        android:id="@+id/get_signal_strength_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_signal_strength" />

    <Button
        android:id="@+id/start_iterations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_iterations" />

    <TextView
        android:id="@+id/iterations_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/current_angle_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_angle" />

    <TextView
        android:id="@+id/current_best_angle_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_angle" />
</LinearLayout>
